# FreeCAD_AirPlaneDesign

./: README.md  airPlaneAirFoil.py  airPlaneAirFoilNaca.py  airPlaneDesignProfilUI.py  airPlaneRib.py
App/: CMakeCache.txt  CMakeLists.txt  pyXfoil.cpp  pylib_generator.py
App/XFoil-lib/: Makefile  libXFoil.1.0.0.dylib  libXFoil.1.dylib
Xfoil/Xfoil/Xfoil.xcodeproj/: project.pbxproj
Xfoil/Xfoil/Xfoil.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Xfoil/Xfoil/Xfoil.xcodeproj/project.xcworkspace/xcuserdata/fredericnivoix.xcuserdatad/: UserInterfaceState.xcuserstate
Xfoil/Xfoil/Xfoil.xcodeproj/xcuserdata/fredericnivoix.xcuserdatad/xcschemes/: xcschememanagement.plist
